--- a/src/app/view/pacientes/pacientes.component.scss
+++ b/src/app/view/pacientes/pacientes.component.scss
@@ -20,6 +20,18 @@
     }
 }
 
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.4s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+
 .modal-header {
     font-size: 1.2rem;
     background: var(--degradado-color) !important;
