--- a/src/app/view/productos/productos-list/productos-list.component.scss
+++ b/src/app/view/productos/productos-list/productos-list.component.scss
@@ -10,7 +10,7 @@
 }
 
 .card-body {
-  padding-bottom: calc(70px + 1rem);
+//  padding-bottom: calc(70px + 1rem);
   /* más respiración visual */
 }
 
