--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -183,7 +183,7 @@
     </section>
     <!-- /.content -->
 
-    <footer class="main-footer">
+    <footer class="main-footer mt-5">
       <div class="float-right d-none d-sm-block">
         <b>Versión</b> 1.0
       </div>
